<resources>
    <string name="app_name">Recipes</string>
    <string name="fish">Fish</string>
    <string name="meat">Meat</string>
    <string name="chicken">Chicken</string>
    <string name="desserts">Dessert</string>
    <string name="salads">Salads</string>
    <string name="soups">Soups</string>
    <string name="pizza">Pizza</string>
    <string name="bread">Bread</string>
    <string name="addRecipes">Add recipes</string>
    <string name="pasta">Pasta</string>
    <string-array name="recipe_types">
        <item>fish</item>
        <item>meat</item>
        <item>chicken</item>
        <item>desserts</item>
        <item>salads</item>
        <item>soups</item>
        <item>pizza</item>
        <item>bread</item>
    </string-array>
</resources>